made final changes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <img src="Content.png" alt="content">
         </div>
     </section>
+    <br>
+    <br>
     <h3>
         Find your best destination
     </h3> 
@@ -45,6 +47,8 @@
             <div class="place">
                 Jawa Tengah, Indonesia
             </div>
+            <br>
+            <br>
         </section>
         <br>
     </section>
@@ -56,12 +60,13 @@
     </h5>
     <br>
     <section class="fig">
-        <div>
+        <div class="location">
             <img src="Location.svg" alt="location icon">
         </div>
-        <div>
+        <div class="place">
             Cappadocia. Turkey
         </div>
+        <br>
         <br>
     </section>
     <section class="pics">
@@ -72,10 +77,10 @@
     </h6>
     <br> 
     <section class="fig">
-        <div>
+        <div class="location">
             <img src="Location.svg" alt="location icon">
         </div>
-        <div>
+        <div class="place">
             Pasuruan, Indonesia
         </div>
     </section>
@@ -89,12 +94,13 @@
     </h6>
     <br>
     <section class="fig">
-        <div>
+        <div class="location">
             <img src="Location.svg" alt="Location icon">
         </div>
-        <div>
+        <div class="place">
             Jawa Tengah, Indonesia
         </div>
+        <br>
         <br>
     </section>
     <section class="pics">
@@ -106,10 +112,10 @@
     </h6>
     <br>
     <section class="fig">
-        <div>
+        <div class="location">
             <img src="Location.svg" alt="Loction icon">
         </div>
-        <div>
+        <div class="place">
             Jawa Tengah Indonesia
         </div>
         <br>
@@ -122,24 +128,24 @@
         Negeri di atas Awan
     </h6>
     <section class="fig">
-        <div>
+        <div class="location">
             <img src="Location.svg" alt="Location icon">
         </div>
-        <div>
+        <div class="place">
             Jawa Tengah Indonesia
         </div>
     </section>  
-    <section>
+    <section class="no">
         <h6 class="Why">
             Why must 
             <br>
             choose us
-        </h6>
-    </section>
+        </h6> 
     <p class="we">
         We have been around for over 10 years. Accompany all our customers all over the world. Thousands of our customers always recommend us because of the service we provide. We are always re-elected and now you will choose us as your travel agent!
     </p>
     <br>
+    </section>  
     <hr>
     <section>
         <h6 class="Best">
@@ -150,7 +156,7 @@
         </h6>
     </section>
     <br>
-    <div>
+    <div class="mine">
         Your trip will be very memorable with the best guide.
     </div>
     <br>
@@ -179,19 +185,25 @@
         <section class="end">
             <div class="colored">
                 More details
+                <br>
+                <br>
             </div>
             <div>
                 <img src="arrow-white.svg" alt="arrow icon">
             </div>
         </section>
     </section>
+    <br>
+    <br>
+    <br>
+    <br>
     <hr>
     <h6 class="Ready">
         Always Ready
         <br>
         Support 24/7.
     </h6>
-    <div>
+    <div class="mine">
         We always make time to ask questions anytime and anywhere.
     </div>
     <br>
@@ -206,20 +218,19 @@
     <br>
     <section>
             <h6 class="Train">
-                <span class="first-word">
-                    Travel,
+                <span class="last">
+                    Travel
                 </span> 
-                make the 
+                , make the 
                 <br>
                 trip memorable
             </h6>
-            <p>
+            <p class="alpha">
                 Thousands of our customers always rocommend us because of the service we provide. Your trip will be very memorable with the best travel agent. 
                 <span class="third-word">
                     Travel!
                 </span>
             </p>
-            <br>
             <img src="Image (16).jpg" alt="tourists">
         </section>
         <section>
@@ -251,13 +262,13 @@
             <h6 class="first-word">
                 Travel
             </h6>
-            <p>
+            <p class="mega">
                 The best travel agent in the world. Contact us immediately now!
             </p> 
             <br>
             <div class="icons">
-                <img src="Path (2).svg" alt=" instagram icon">
-                <img src="Path (1).svg" alt="twitter icon">
+                <img class="path-2" src="Path (2).svg" alt=" instagram icon">
+                <img class="path-2" src="Path (1).svg" alt="twitter icon">
                 <img src="Path.svg" alt="youtube icon">
             </div>
             <br>
