--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <section class="container">
         <h1>Travel
         </h1>
-        <img class="menu" src="menu (2).svg" alt=" ">
+        <img class="menu" src="/pictures/menu(2).svg" alt=" ">
     </section> 
     <link rel="stylesheet" href="style.css">
-    <br>
-    <br>
     <section class="background">
         <h2 class="title">
             <span class="word">
@@ -21,11 +19,9 @@
             </span> around the world
         </h2>
         <div class="first">
-            <img src="Content.png" alt="content">
+            <img src="/pictures/Content.png" alt="content">
         </div>
     </section>
-    <br>
-    <br>
     <h3>
         Find your best destination
     </h3> 
@@ -33,103 +29,86 @@
         We have more than 1000+ destinations you can choose
     </p> 
     <section class="lake">
-        <img src="Image (5).jpg" alt="Image">
+        <img src="/pictures/Image(5).jpg" alt="Image">
     </section>
     <section>
         <h4 class="caption">
             Mirror Lake
-        </h4>
-        <br> 
+        </h4> 
         <section class="fig">
             <div class="location">
-                <img src="Location.svg" alt="Location icon">
+                <img src="/pictures/Location.svg" alt="Location icon">
             </div>
             <div class="place">
                 Jawa Tengah, Indonesia
             </div>
-            <br>
-            <br>
         </section>
-        <br>
     </section>
     <section class="pics">
-        <img src="Image (10).jpg" alt="Hot Air Balloon">
+        <img src="/pictures/Image(10).jpg" alt="Hot Air Balloon">
     </section>
-    <h5 class="caption">
+    <h4 class="caption">
         Hot Air Balloon
-    </h5>
-    <br>
+    </h4>
     <section class="fig">
         <div class="location">
-            <img src="Location.svg" alt="location icon">
+            <img src="/pictures/Location.svg" alt="location icon">
         </div>
         <div class="place">
             Cappadocia. Turkey
         </div>
-        <br>
-        <br>
     </section>
     <section class="pics">
-        <img src="Image (11).jpg" alt="mountain">
+        <img src="/pictures/Image(11).jpg" alt="mountain">
     </section>
-    <h6 class="caption">
+    <h5 class="caption">
         Oeschinen Lake
-    </h6>
-    <br> 
+    </h5>
     <section class="fig">
         <div class="location">
-            <img src="Location.svg" alt="location icon">
+            <img src="/pictures/Location.svg" alt="location icon">
         </div>
         <div class="place">
             Pasuruan, Indonesia
         </div>
     </section>
-    <br>
     <section class="pics">
-        <img src="Image (12).jpg" alt="water fall">
+        <img src="/pictures/Image(12).jpg" alt="water fall">
     </section>
-    <br>
     <h6 class="caption">
         Rhine Falls
     </h6>
-    <br>
     <section class="fig">
         <div class="location">
-            <img src="Location.svg" alt="Location icon">
+            <img src="/pictures/Location.svg" alt="Location icon">
         </div>
         <div class="place">
             Jawa Tengah, Indonesia
         </div>
-        <br>
-        <br>
     </section>
     <section class="pics">
-        <img src="Image (13).jpg" alt="Lake">
+        <img src="/pictures/Image(13).jpg" alt="Lake">
     </section>
-    <br>
     <h6 class="caption">
         Sunter Lake
     </h6>
-    <br>
     <section class="fig">
         <div class="location">
-            <img src="Location.svg" alt="Loction icon">
+            <img src="/pictures/Location.svg" alt="Loction icon">
         </div>
         <div class="place">
             Jawa Tengah Indonesia
         </div>
-        <br>
-        <br>
     </section>
     <section class="pics">
-        <img src="Image (14).jpg" alt="green field">
+        <img src="/pictures/Image(14).jpg" alt="green field">
     </section> 
     <h6 class="caption">
         Negeri di atas Awan
     </h6>
     <section class="fig">
         <div class="location">
-            <img src="Location.svg" alt="Location icon">
+            <img src="/pictures/Location.svg" alt="Location icon">
         </div>
         <div class="place">
             Jawa Tengah Indonesia
@@ -144,7 +123,6 @@
     <p class="we">
         We have been around for over 10 years. Accompany all our customers all over the world. Thousands of our customers always recommend us because of the service we provide. We are always re-elected and now you will choose us as your travel agent!
     </p>
-    <br>
     </section>  
     <hr>
     <section>
@@ -152,25 +130,19 @@
             Best Guide,
             <br>
             Best Experience.
-            <br>
         </h6>
     </section>
-    <br>
     <div class="mine">
         Your trip will be very memorable with the best guide.
     </div>
-    <br>
-    <br>
     <section class="end">
         <div class="More">
             More details
         </div>
         <div>
-            <img src="arrow-right.svg" alt="next icon">
+            <img src="/pictures/arrow-right.svg" alt="next icon">
         </div>
     </section>
-    <br>
-    <br>
     <section class="ash">
         <h6 class="Always">
             Always have
@@ -180,23 +152,15 @@
         <div class="Line">
             We always offer special tickets and we give them to all customers
         </div>
-        <br>
-        <br>
-        <section class="end">
+    <section class="end">
             <div class="colored">
                 More details
-                <br>
-                <br>
             </div>
             <div>
-                <img src="arrow-white.svg" alt="arrow icon">
+                <img src="/pictures/arrow-white.svg" alt="arrow icon">
             </div>
         </section>
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
     <hr>
     <h6 class="Ready">
         Always Ready
@@ -206,16 +170,12 @@
     <div class="mine">
         We always make time to ask questions anytime and anywhere.
     </div>
-    <br>
-    <br>
     <section class="end">
         <div class="More">
             More details
         </div>
-        <img src="arrow-right.svg" alt="arrow icon">
+        <img src="/pictures//arrow-right.svg" alt="arrow icon">
     </section>
-    <br>
-    <br>
     <section>
             <h6 class="Train">
                 <span class="last">
@@ -231,22 +191,19 @@
                     Travel!
                 </span>
             </p>
-            <img src="Image (16).jpg" alt="tourists">
+            <img src="/pictures/Image(16).jpg" alt="tourists">
         </section>
         <section>
             <div class="Watch">
                 Watch our entire 
-                <br>
                 <span class="fourth-word">
                     trip
                 </span> 
                 <br> 
                 documentation
             </div> 
-            <br>
-            <img src="Video (2).jpg" alt="video icon">
+            <img src="/pictures/Video(2).jpg" alt="video icon">
         </section> 
-        <br>
         <section>
             <h6 class="get">
                 Get our best offer
@@ -257,7 +214,6 @@
         <a href=" " class="Click button">
             Click here!
         </a>
-        <br>
         <section>
             <h6 class="first-word">
                 Travel
@@ -265,13 +221,11 @@
             <p class="mega">
                 The best travel agent in the world. Contact us immediately now!
             </p> 
-            <br>
             <div class="icons">
-                <img class="path-2" src="Path (2).svg" alt=" instagram icon">
-                <img class="path-2" src="Path (1).svg" alt="twitter icon">
-                <img src="Path.svg" alt="youtube icon">
+                <img class="path-2" src="/pictures/Path(2).svg" alt=" instagram icon">
+                <img class="path-2" src="/pictures/Path(1).svg" alt="twitter icon">
+                <img src="/pictures/Path.svg" alt="youtube icon">
             </div>
-            <br>
             <div class="footer">
                 <p>
                     Home
